# SMOLPP-analyzer

./: .gitignore  README.md  main.py  pyproject.toml  smolpp.py  stoner_model.pth
features/: extract_features.feature
features/steps/: extract_features_steps.py
