[tool.poetry]
name = "smolpp"
version = "0.1.0"
description = ""
authors = ["jkarenko <juho.karenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
librosa = "*"
torch = "*"
pandas = "*"
numpy = "^1.26.4"
seaborn = "*"
behave = "*"
yt-dlp = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
